--- a/ChildViewControllerInScrollView/Info.plist
+++ b/ChildViewControllerInScrollView/Info.plist
@@ -23,7 +23,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>DonMag</string>
+	<string>SBOnly</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
